--- a/www/package.json
+++ b/www/package.json
@@ -5,14 +5,20 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "build": "webpack --config webpack.config.js",
+    "build": "webpack --mode production",
     "start": "webpack-dev-server"
   },
   "dependencies": {
     "play": "file:../pkg"
   },
   "devDependencies": {
+    "bulma": "^0.9.0",
     "copy-webpack-plugin": "^6.0.2",
+    "css-loader": "^3.6.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.2.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
