--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,21 +9,14 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Install wasm-pack
-        run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
+      - run: npm install
 
-      - run: wasm-pack build
-
-      - working-directory: ./www
-        run: npm install
-
-      - working-directory: ./www
-        run: npm run build
+      - run: npm run build
 
       - name: Publish
         uses: netlify/actions/cli@master
         with:
-          args: deploy --dir=./www/dist --prod --message "$GITHUB_SHA"
+          args: deploy --dir=./dist --prod --message "$GITHUB_SHA"
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
