--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
   },
   "devDependencies": {
     "@wasm-tool/wasm-pack-plugin": "^1.3.1",
-    "copy-webpack-plugin": "^6.0.3",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "rimraf": "^3.0.2",
-    "css-loader": "^4.2.0",
+    "bulma": "^0.9.0",
+    "copy-webpack-plugin": "^6.1.0",
+    "css-loader": "^4.2.2",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
-    "sass-loader": "^9.0.2",
+    "rimraf": "^3.0.2",
+    "sass-loader": "^9.0.3",
     "style-loader": "^1.2.1",
-    "bulma": "^0.9.0"
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   }
 }
