--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,17 +22,17 @@ rsat = "=0.1.11"
 
 # The `wasm-bindgen` crate provides the bare minimum functionality needed
 # to interact with JavaScript.
-wasm-bindgen = "0.2.45"
+wasm-bindgen = "0.2.68"
 
 # `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
 # compared to the default allocator's ~10K. However, it is slower than the default
 # allocator, so it's not enabled by default.
-wee_alloc = { version = "0.4.2", optional = true }
+wee_alloc = { version = "0.4.5", optional = true }
 
 # The `web-sys` crate allows you to interact with the various browser APIs,
 # like the DOM.
 [dependencies.web-sys]
-version = "0.3.22"
+version = "0.3.45"
 features = ["console"]
 
 # The `console_error_panic_hook` crate provides better debugging of panics by
@@ -40,14 +40,19 @@ features = ["console"]
 # all the `std::fmt` and `std::panicking` infrastructure, so it's only enabled
 # in debug mode.
 [target."cfg(debug_assertions)".dependencies]
-console_error_panic_hook = "0.1.5"
+console_error_panic_hook = "0.1.6"
 
 # These crates are used for running unit tests.
 [dev-dependencies]
-wasm-bindgen-test = "0.3.15"
-futures = "0.3.5"
-js-sys = "0.3.22"
-wasm-bindgen-futures = "0.4.15"
+wasm-bindgen-test = "0.3.18"
+futures = "0.3.6"
+js-sys = "0.3.45"
+wasm-bindgen-futures = "0.4.18"
+
+# TODO: The below two line needs to be removed.
+# It is workaround until https://github.com/rustwasm/wasm-pack/issues/886 is fixed.
+[package.metadata.wasm-pack.profile.release]
+wasm-opt = false
 
 ## OLD
 
