--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "scripts": {
     "build": "rimraf dist pkg && webpack",
-    "start": "rimraf dist pkg && webpack-dev-server --open -d",
+    "start": "rimraf dist pkg && webpack serve --mode=development",
     "test": "cargo test && wasm-pack test --headless"
   },
   "devDependencies": {
@@ -19,7 +19,7 @@
     "sass-loader": "^10.0.3",
     "style-loader": "^2.0.0",
     "webpack": "^5.1.3",
-    "webpack-cli": "^3.3.12",
+    "webpack-cli": "^4.0.0",
     "webpack-dev-server": "^3.11.0"
   }
 }
