--- a/package.json
+++ b/package.json
@@ -9,17 +9,17 @@
     "test": "cargo test && wasm-pack test --headless"
   },
   "devDependencies": {
-    "@wasm-tool/wasm-pack-plugin": "^1.3.1",
-    "bulma": "^0.9.1",
-    "copy-webpack-plugin": "^6.4.0",
-    "css-loader": "^5.0.1",
-    "mini-css-extract-plugin": "^1.3.3",
-    "node-sass": "^5.0.0",
+    "@wasm-tool/wasm-pack-plugin": "^1.4.0",
+    "bulma": "^0.9.3",
+    "copy-webpack-plugin": "^6.4.1",
+    "css-loader": "^5.2.6",
+    "mini-css-extract-plugin": "^1.6.1",
+    "sass": "^1.35.1",
     "rimraf": "^3.0.2",
-    "sass-loader": "^10.1.0",
+    "sass-loader": "^10.2.0",
     "style-loader": "^2.0.0",
-    "webpack": "^5.10.1",
-    "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0"
+    "webpack": "^5.40.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   }
 }
